@@ -555,7 +555,7 @@ argument_list|,
 name|httpClient
 argument_list|,
 operator|new
-name|XMLResponseParser
+name|BinaryResponseParser
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -606,7 +606,7 @@ argument_list|,
 literal|null
 argument_list|,
 operator|new
-name|XMLResponseParser
+name|BinaryResponseParser
 argument_list|()
 argument_list|)
 expr_stmt|;
