@@ -238,8 +238,8 @@ literal|5
 argument_list|)
 decl_stmt|,
 comment|// NamedList
-DECL|field|RESERVED2
-name|RESERVED2
+DECL|field|EXTERN_STRING
+name|EXTERN_STRING
 init|=
 call|(
 name|byte
@@ -779,6 +779,17 @@ argument_list|(
 name|dis
 argument_list|)
 return|;
+case|case
+name|EXTERN_STRING
+operator|>>>
+literal|5
+case|:
+return|return
+name|readExternString
+argument_list|(
+name|dis
+argument_list|)
+return|;
 block|}
 switch|switch
 condition|(
@@ -1028,6 +1039,14 @@ operator|instanceof
 name|SolrDocument
 condition|)
 block|{
+comment|//this needs special treatment to know which fields are to be written
+if|if
+condition|(
+name|resolver
+operator|==
+literal|null
+condition|)
+block|{
 name|writeSolrDocument
 argument_list|(
 operator|(
@@ -1036,6 +1055,54 @@ operator|)
 name|val
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|Object
+name|retVal
+init|=
+name|resolver
+operator|.
+name|resolve
+argument_list|(
+name|val
+argument_list|,
+name|this
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|retVal
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|retVal
+operator|instanceof
+name|SolrDocument
+condition|)
+block|{
+name|writeSolrDocument
+argument_list|(
+operator|(
+name|SolrDocument
+operator|)
+name|retVal
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|writeVal
+argument_list|(
+name|retVal
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 return|return
 literal|true
 return|;
@@ -1267,6 +1334,88 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|writeSolrDocument
+argument_list|(
+name|doc
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|writeSolrDocument
+specifier|public
+name|void
+name|writeSolrDocument
+parameter_list|(
+name|SolrDocument
+name|doc
+parameter_list|,
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|fields
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|count
+init|=
+literal|0
+decl_stmt|;
+if|if
+condition|(
+name|fields
+operator|==
+literal|null
+condition|)
+block|{
+name|count
+operator|=
+name|doc
+operator|.
+name|getFieldNames
+argument_list|()
+operator|.
+name|size
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|entry
+range|:
+name|doc
+control|)
+block|{
+if|if
+condition|(
+name|fields
+operator|.
+name|contains
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+condition|)
+name|count
+operator|++
+expr_stmt|;
+block|}
+block|}
 name|writeTag
 argument_list|(
 name|SOLRDOC
@@ -1276,13 +1425,7 @@ name|writeTag
 argument_list|(
 name|ORDERED_MAP
 argument_list|,
-name|doc
-operator|.
-name|getFieldNames
-argument_list|()
-operator|.
-name|size
-argument_list|()
+name|count
 argument_list|)
 expr_stmt|;
 for|for
@@ -1300,6 +1443,23 @@ range|:
 name|doc
 control|)
 block|{
+if|if
+condition|(
+name|fields
+operator|==
+literal|null
+operator|||
+name|fields
+operator|.
+name|contains
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+condition|)
+block|{
 name|String
 name|name
 init|=
@@ -1308,7 +1468,7 @@ operator|.
 name|getKey
 argument_list|()
 decl_stmt|;
-name|writeStr
+name|writeExternString
 argument_list|(
 name|name
 argument_list|)
@@ -1326,6 +1486,7 @@ argument_list|(
 name|val
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|readSolrDocument
@@ -3271,6 +3432,209 @@ literal|0x3F
 operator|)
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+DECL|field|stringsCount
+specifier|private
+name|int
+name|stringsCount
+init|=
+literal|0
+decl_stmt|;
+DECL|field|stringsMap
+specifier|private
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Integer
+argument_list|>
+name|stringsMap
+decl_stmt|;
+DECL|field|stringsList
+specifier|private
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|stringsList
+decl_stmt|;
+DECL|method|writeExternString
+specifier|public
+name|void
+name|writeExternString
+parameter_list|(
+name|String
+name|s
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|s
+operator|==
+literal|null
+condition|)
+block|{
+name|writeTag
+argument_list|(
+name|NULL
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+name|Integer
+name|idx
+init|=
+name|stringsMap
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|stringsMap
+operator|.
+name|get
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|idx
+operator|==
+literal|null
+condition|)
+name|idx
+operator|=
+literal|0
+expr_stmt|;
+name|writeTag
+argument_list|(
+name|EXTERN_STRING
+argument_list|,
+name|idx
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|idx
+operator|==
+literal|0
+condition|)
+block|{
+name|writeStr
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|stringsMap
+operator|==
+literal|null
+condition|)
+name|stringsMap
+operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Integer
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|stringsMap
+operator|.
+name|put
+argument_list|(
+name|s
+argument_list|,
+operator|++
+name|stringsCount
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|readExternString
+specifier|public
+name|String
+name|readExternString
+parameter_list|(
+name|FastInputStream
+name|fis
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|idx
+init|=
+name|readSize
+argument_list|(
+name|fis
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|idx
+operator|!=
+literal|0
+condition|)
+block|{
+comment|// idx != 0 is the index of the extern string
+return|return
+name|stringsList
+operator|.
+name|get
+argument_list|(
+name|idx
+operator|-
+literal|1
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+comment|// idx == 0 means it has a string value
+name|String
+name|s
+init|=
+operator|(
+name|String
+operator|)
+name|readVal
+argument_list|(
+name|fis
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|stringsList
+operator|==
+literal|null
+condition|)
+name|stringsList
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|stringsList
+operator|.
+name|add
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+return|return
+name|s
+return|;
 block|}
 block|}
 DECL|interface|ObjectResolver
