@@ -550,6 +550,34 @@ if|if
 condition|(
 name|o
 operator|instanceof
+name|SolrDocument
+condition|)
+block|{
+name|SolrDocument
+name|solrDocument
+init|=
+operator|(
+name|SolrDocument
+operator|)
+name|o
+decl_stmt|;
+name|codec
+operator|.
+name|writeSolrDocument
+argument_list|(
+name|solrDocument
+argument_list|,
+name|returnFields
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+if|if
+condition|(
+name|o
+operator|instanceof
 name|Document
 condition|)
 block|{
