@@ -1925,7 +1925,7 @@ else|else
 block|{
 if|if
 condition|(
-name|a
+name|b
 operator|.
 name|getMaxScore
 argument_list|()
@@ -1935,7 +1935,7 @@ condition|)
 block|{
 if|if
 condition|(
-name|b
+name|a
 operator|.
 name|getMaxScore
 argument_list|()
@@ -3065,6 +3065,15 @@ operator|+
 literal|" desc"
 argument_list|)
 expr_stmt|;
+name|handle
+operator|.
+name|put
+argument_list|(
+literal|"maxScore"
+argument_list|,
+name|SKIPVAL
+argument_list|)
+expr_stmt|;
 name|query
 argument_list|(
 literal|"q"
@@ -3072,6 +3081,15 @@ argument_list|,
 literal|"{!func}"
 operator|+
 name|i1
+argument_list|)
+expr_stmt|;
+comment|// does not expect maxScore. So if it comes ,ignore it. NamedListCodec.writeSolrDocumentList()
+comment|//is agnostic of request params.
+name|handle
+operator|.
+name|remove
+argument_list|(
+literal|"maxScore"
 argument_list|)
 expr_stmt|;
 name|query
@@ -3104,6 +3122,15 @@ argument_list|(
 literal|"response"
 argument_list|,
 name|UNORDERED
+argument_list|)
+expr_stmt|;
+name|handle
+operator|.
+name|put
+argument_list|(
+literal|"maxScore"
+argument_list|,
+name|SKIPVAL
 argument_list|)
 expr_stmt|;
 name|query
@@ -3157,15 +3184,6 @@ argument_list|,
 literal|"start"
 argument_list|,
 literal|"100"
-argument_list|)
-expr_stmt|;
-name|handle
-operator|.
-name|put
-argument_list|(
-literal|"maxScore"
-argument_list|,
-name|SKIPVAL
 argument_list|)
 expr_stmt|;
 name|handle
